feat: getComments 시나리오 작성, createComment와 더미데이터 수정